# College

./: README.md
B tech/CPP/: CMakeLists.txt
B tech/CPP/DSA/: BST.cpp  BST_insertion.cpp  BinarySearch.cpp  LL.cpp  Stack.cpp  bubbleSort.cpp  insertionDeletion.cpp  marks.cpp
B tech/CPP/OOPS/: And.java  ComplexNumberAddtion.cpp  CustomType.cpp  ExplicitConstructor.cpp  Initilizer.cpp  Main.java  OperatorOverloading.cpp  PassByReferance.cpp  Person.cpp  Recursion.cpp  Student.cpp  TypeConversion.cpp  areaofCircle.cpp  areaofRectangle.cpp  class.cpp  classToclass.cpp  const.cpp  constructor.cpp  dataHiding.cpp  dynamicMemoryAlloc.cpp  exceptionHandling.cpp  explictConstructor.cpp  fileHandling.cpp  friendFunction.cpp  knapsack_using_greedy.cpp  mulitpleInheritance.cpp  nitin.txt  nptel.cpp  objectToFunction.cpp  overLoading.cpp  pointer.cpp  pointerToArray.cpp  runTimepolymorphism.cpp  singleInhertance.cpp  swaping.cpp  tempCodeRunnerFile.cpp
B tech/DSA/: BinarySearch.cpp  bubbleSort.cpp  linear.cpp  quickSort.cpp
B tech/OOPS/: Student.cpp  areaofRectangle.cpp  fibonnaci.cpp  static.cpp  swaping.cpp
B tech/python_assignment/: calculator.py  first_two.py  list_append.py  swap.py
LPU-3rd-sem/C programs/: CheckingInput.c  Reverse.c  adding_three_numbers.c  areaofcircle.c  asciiValue.c  assignmentOperator.c  callbyrefrence.c  fibonacci.c  functions.c  ifElse.c  if_else_if.c  newarr.c  ques3.c  ques5.c  starts.c  (+2 more)
PHP/: Eval.php  Ques1.xml  Ques2.php  Ques3.php  Ques4.php  array.php  calculator.php  factorial.php  form.php  pattern.php  registration.php
(+158 files in other folders)
